--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -1,31 +1,132 @@
+
+/* Header Styles, this includes up until the buttons */
+
+* {
+    font-family: 'Roboto', sans-serif;
+ }
+ 
  body {
-            background-image: url("../Images/road2.jpg");
-            background-size: 100%;
-        }
+     /* background-image: url("../Images/concrete-texture.png"); */
+     background-image: url("../Images/road.jpeg");
+     background-size: cover;
+     background-position: center;
+     max-width: 100%;
+}
+
+.responsive-img {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
         
-        .main {
-            font-family: 'Roboto', sans-serif;
-            text-align: center;
-            font-size: 65px;
-            margin: 30px;
-        }
-        .waves-effect {
-            background-color: black;
-            font-family: 'Roboto', sans-serif;
-            border-radius: 5px;
-        }
-        .waves-effect:hover {
-            background-color: chocolate;
-            color:black;
-            font-family: 'Roboto', sans-serif;
-            
-        }
+.main {
+    font-family: 'Permanent Marker', sans-serif;
+    text-align: center;
+    font-size: 65px;
+    margin: 30px;
+}
+        
+.waves-effect {
+    background-color: black;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 5px;
+}
+        
+.waves-effect:hover {
+    background-color: rgb(156, 1, 1);
+    color:black;
+    font-family: 'Roboto', sans-serif;
+}
+
+.waves-effect:focus {
+    background-color: black;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 5px;
+}
+
+::placeholder {
+    color: black;
+}
+
+.input-field label {
+    color: #000;
+  }
 
 .input-field input:focus + label {
-   color:chocolate !important;
+   color: black !important;
  }
-  .row .input-field input:focus {
-   border-bottom: 1px solid chocolate!important;
-   box-shadow: 0 1px 0 0 chocolate !important
+
+.row .input-field input:focus {
+   border-bottom: 1px solid rgb(156, 1, 1)!important;
+   box-shadow: 0 1px 0 0 rgb(156, 1, 1) !important
  }
         
+
+/* Body Styles start here */
+
+#displayDiv {
+    margin-top: 70px;
+    margin-bottom: 70px;
+    background:  rgba(0, 0, 0, 0.555); 
+    color: white;
+}
+
+ #displayDiv p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+ }
+
+ .info {
+     color: white;
+     background-color: rgba(0, 0, 0, 0.692);
+     width: 100%;
+     height: 400px;;
+     padding: 10px;
+     position: relative;
+ }
+
+ img {
+    width: 200px;
+ }
+
+ .image {
+     text-align: center;
+ }
+
+ .iframe-container {
+     position: relative;
+     width: 100%;
+     padding-bottom: 56.25%;
+     height: 315px;
+ }
+
+.iframe-container iframe {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Footer Styles */
+
+footer {
+    background-color: rgba(0, 0, 0, 0.555);
+    text-align: center;
+    margin: 10px;
+}
+
+#share-buttons img {
+    width: 35px;
+    padding: 5px;
+    border: 0;
+    box-shadow: 0;
+    display: inline;
+    }
+
+
+
+
+
