--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -61,7 +61,10 @@
    border-bottom: 1px solid rgb(156, 1, 1)!important;
    box-shadow: 0 1px 0 0 rgb(156, 1, 1) !important
  }
-        
+     
+ .button {
+     margin: 15px;
+ }
 
 /* Body Styles start here */
 
@@ -70,16 +73,18 @@
     margin-bottom: 70px;
     background:  rgba(0, 0, 0, 0.555); 
     color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
- #displayDiv p {
+ .placeholder {
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: 28px;
  }
 
  .info {
      color: white;
-     background-color: rgba(0, 0, 0, 0.692);
+     background-color: rgba(0, 0, 0, 0.555);
      width: 100%;
      height: 400px;;
      padding: 10px;
@@ -110,12 +115,17 @@
     height: 100%;
 }
 
+.row {
+    margin-top: 70px;
+}
+
 /* Footer Styles */
 
 footer {
     background-color: rgba(0, 0, 0, 0.555);
     text-align: center;
-    margin: 10px;
+    margin-top: 70px;
+    padding: 12px;
 }
 
 #share-buttons img {
